playlist周りの実装 (#36)
